@@ -12,6 +12,7 @@
  */
 package org.openhab.binding.digitalstrom.internal.lib.serverconnection.impl;
 
+import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileNotFoundException;
@@ -42,8 +43,7 @@ import javax.net.ssl.SSLSocketFactory;
 import javax.net.ssl.TrustManager;
 import javax.net.ssl.X509TrustManager;
 
-import org.apache.commons.io.IOUtils;
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.openhab.binding.digitalstrom.internal.lib.config.Config;
 import org.openhab.binding.digitalstrom.internal.lib.manager.ConnectionManager;
 import org.openhab.binding.digitalstrom.internal.lib.serverconnection.HttpTransport;
@@ -194,13 +194,14 @@ public class HttpTransportImpl implements HttpTransport {
             if (config != null) {
                 cert = config.getCert();
                 logger.debug("generate SSLcontext from config cert");
-                if (StringUtils.isNotBlank(cert)) {
+                if (cert != null && !cert.isBlank()) {
                     sslSocketFactory = generateSSLContextFromPEMCertString(cert);
                 } else {
-                    if (StringUtils.isNotBlank(config.getTrustCertPath())) {
+                    String trustCertPath = config.getTrustCertPath();
+                    if (trustCertPath != null && !trustCertPath.isBlank()) {
                         logger.debug("generate SSLcontext from config cert path");
-                        cert = readPEMCertificateStringFromFile(config.getTrustCertPath());
-                        if (StringUtils.isNotBlank(cert)) {
+                        cert = readPEMCertificateStringFromFile(trustCertPath);
+                        if (cert != null && !cert.isBlank()) {
                             sslSocketFactory = generateSSLContextFromPEMCertString(cert);
                         }
                     } else {
@@ -355,7 +356,7 @@ public class HttpTransportImpl implements HttpTransport {
 
     private HttpsURLConnection getConnection(String request, int connectTimeout, int readTimeout) throws IOException {
         String correctedRequest = request;
-        if (StringUtils.isNotBlank(correctedRequest)) {
+        if (correctedRequest != null && !correctedRequest.isBlank()) {
             correctedRequest = fixRequest(correctedRequest);
             URL url = new URL(this.uri + correctedRequest);
             HttpsURLConnection connection = (HttpsURLConnection) url.openConnection();
@@ -415,7 +416,7 @@ public class HttpTransportImpl implements HttpTransport {
     }
 
     private String readPEMCertificateStringFromFile(String path) {
-        if (StringUtils.isBlank(path)) {
+        if (path == null || path.isBlank()) {
             logger.error("Path is empty.");
         } else {
             File dssCert = new File(path);
@@ -446,9 +447,9 @@ public class HttpTransportImpl implements HttpTransport {
 
     @Override
     public String writePEMCertFile(String path) {
-        String correctedPath = StringUtils.trimToEmpty(path);
+        String correctedPath = path == null ? "" : path.trim();
         File certFilePath;
-        if (StringUtils.isNotBlank(correctedPath)) {
+        if (!correctedPath.isBlank()) {
             certFilePath = new File(correctedPath);
             boolean pathExists = certFilePath.exists();
             if (!pathExists) {
@@ -458,7 +459,7 @@ public class HttpTransportImpl implements HttpTransport {
                 correctedPath = correctedPath + "/";
             }
         }
-        InputStream certInputStream = IOUtils.toInputStream(cert);
+        InputStream certInputStream = new ByteArrayInputStream(cert.getBytes(StandardCharsets.UTF_8));
         X509Certificate trustedCert;
         try {
             trustedCert = (X509Certificate) CertificateFactory.getInstance("X.509")
@@ -485,9 +486,9 @@ public class HttpTransportImpl implements HttpTransport {
     }
 
     private SSLSocketFactory generateSSLContextFromPEMCertString(String pemCert) {
-        if (StringUtils.isNotBlank(pemCert) && pemCert.startsWith(BEGIN_CERT)) {
+        if (pemCert != null && !pemCert.isBlank() && pemCert.startsWith(BEGIN_CERT)) {
             try {
-                InputStream certInputStream = IOUtils.toInputStream(pemCert);
+                InputStream certInputStream = new ByteArrayInputStream(pemCert.getBytes(StandardCharsets.UTF_8));
                 final X509Certificate trustedCert = (X509Certificate) CertificateFactory.getInstance("X.509")
                         .generateCertificate(certInputStream);
 
